force-app/main/default/objects/Outcome__c/Outcome__c.object-meta.xml
<CustomObject>
    <description>ExP OM: An Outcome generated from the results of child Outcome Indicators</description>
    <label>Outcome</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Outcome Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>