force-app/main/default/objects/Outcome__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>