force-app/main/default/objects/Outcome__c/fields/Change_from_Baseline_Percent__c.field-meta.xml
<CustomField>
    <fullName>Change_from_Baseline_Percent__c</fullName>
    <formula>IF(NOT(ISBLANK(Baseline__c)), (( Baseline__r.Raw_Value__c  - Baseline__r.Raw_Value__c  )  / Baseline__r.Raw_Value__c  ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change from Baseline (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>