force-app/main/default/objects/Outcome__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date on which outcome status was set to &apos;Closed&apos;</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>