force-app/main/default/objects/Outcome__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipLabel>Outcomes (Next)</relationshipLabel>
    <relationshipName>Outcomes2</relationshipName>
    <type>Lookup</type>
</CustomField>