force-app/main/default/objects/Outcome__c/fields/Outcome_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Configuration__c</fullName>
    <description>The configuration that controls how this outcome is generated</description>
    <label>Outcome Configuration</label>
    <referenceTo>Outcome_Configuration__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>