force-app/main/default/objects/Outcome__c/fields/Outcome_Label__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Label__c</fullName>
    <formula>Outcome_Configuration__r.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outcome Label</label>
    <type>Text</type>
</CustomField>