force-app/main/default/objects/Outcome__c/fields/Outcome_Observer_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Observer_Hyperlink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Outcome_Observer_Id__c,  Outcome_Observer_Hyperlink_Label__c)</formula>
    <label>Outcome Observer Hyperlink</label>
    <type>Text</type>
</CustomField>