force-app/main/default/objects/Outcome__c/fields/Outcome_Observer_Hyperlink_Label__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Observer_Hyperlink_Label__c</fullName>
    <formula>&apos;Go to Observer&apos;</formula>
    <label>Outcome Observer Hyperlink Label</label>
    <type>Text</type>
</CustomField>