force-app/main/default/objects/Outcome__c/fields/Outcome_Observer_Id__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Observer_Id__c</fullName>
    <label>Outcome Observer Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>