force-app/main/default/objects/Outcome__c/fields/Outcome_Parent_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Parent_Hyperlink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Outcome_Parent_Id__c,  Outcome_Parent_Hyperlink_Label__c)</formula>
    <label>Outcome Parent Hyperlink</label>
    <type>Text</type>
</CustomField>