force-app/main/default/objects/Outcome__c/fields/Outcome_Parent_Hyperlink_Label__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Parent_Hyperlink_Label__c</fullName>
    <formula>&apos;Go to Parent&apos;</formula>
    <label>Outcome Parent Hyperlink Label</label>
    <type>Text</type>
</CustomField>