force-app/main/default/objects/Outcome__c/fields/Outcome_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Parent_Id__c</fullName>
    <description>Id of the sObject (Case Record, Case Participant, etc) that this outcome is related to</description>
    <inlineHelpText>Id of the sObject (Case Record, Case Participant, etc) that this outcome is related to</inlineHelpText>
    <label>Outcome Parent Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>