force-app/main/default/objects/Outcome__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipLabel>Outcomes (Previous)</relationshipLabel>
    <relationshipName>Outcomes1</relationshipName>
    <type>Lookup</type>
</CustomField>