force-app/main/default/objects/Outcome__c/fields/Raw_Value__c.field-meta.xml
<CustomField>
    <fullName>Raw_Value__c</fullName>
    <description>Overall value for outcome. This value is generated by the outcome engine.</description>
    <label>Raw Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>