force-app/main/default/objects/Outcome__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date that outcome was first generated</description>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>