force-app/main/default/objects/Outcome__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Outcome_Configuration__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Raw_Value__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>